<resources>
    <string name="app_name">Myoband Companion App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to the MyoBand Companion App!\nPlease press the START button to continue!</string>
    <string name="start_btn_txt">Start</string>
    <string name="calibration_btn_txt">Calibration</string>
    <string name="games_btn_txt">Training Games</string>
    <string name="menu_txt">Main Menu</string>
    <string name="calibration_tv_txt">Calibration</string>
    <string name="open_tv_txt">Open</string>
    <string name="close_tv_txt">Close</string>

    <!--    String that fixes error in Unity player-->
    <string name="game_view_content_description">Game view</string>
    <string name="connecting_tv_txt">Searching for previously paired Myoband device…</string>
    <string name="connected_tv_txt">Connected!\nPlease press the CONTINUE button to proceed to the main menu!</string>
    <string name="connected_btn_txt">Continue</string>
    <string name="bonding_btn_txt">Find Devices</string>
    <string name="bonding_tv_txt">Please press the FIND DEVICES button to search for available Myoband devices!</string>
    <string name="logo_description">Logo of IBME</string>
    <string name="connection_tv_txt">Connect to Myoband device</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_btn_txt">ENTER</string>
    <string name="threshold_txt">ON</string>
    <string name="title_activity_main_unity">MainUnityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>