<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <Button
        android:id="@+id/calibration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_txt_size"
        android:layout_marginTop="100dp"
        android:text="@string/calibration_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_tv" />

    <Button
        android:id="@+id/games_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_txt_size"
        android:layout_marginTop="100dp"
        android:text="@string/games_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibration_btn" />

    <TextView
        android:id="@+id/menu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/menu_txt"
        android:textSize="@dimen/title_tv_txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/ble_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="@dimen/button_txt_size"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:text="BLE TEST"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/games_btn" />-->
</androidx.constraintlayout.widget.ConstraintLayout>