<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calibrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalibrationFragment" >

    <TextView
        android:id="@+id/close_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_tv_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/bar_2"
        app:layout_constraintStart_toStartOf="@+id/bar_2"
        app:layout_constraintTop_toTopOf="@+id/open_tv" />

    <ProgressBar
        android:id="@+id/bar_2"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:progressDrawable="@drawable/progress_drawable_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bar_1" />

    <TextView
        android:id="@+id/calibration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calibration_tv_txt"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/bar_1"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:progressDrawable="@drawable/progress_drawable_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_tv" />

    <TextView
        android:id="@+id/open_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/open_tv_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/bar_1"
        app:layout_constraintStart_toStartOf="@+id/bar_1"
        app:layout_constraintTop_toBottomOf="@+id/calibration_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>